# stlcat

./: CMakeLists.txt  README.md
include/: render.h  solid.h  stl3d.h  stlcat_args.h  stlrender.h  terminal.h  tri.h  vec2.h  vec3.h
src/: render.c  solid.c  stlcat.c  stlrender.c  terminal.c  tri.c  vec3.c
